--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <header>
     <div id="time" class="text-leader"
          style="position:absolute;font-weight: 500;top:25px;left:50%;transform: translate(-50%, -50%);">
-        12:23:56
+
     </div>
 </header>
 <div class="text-leader" style="position:absolute;bottom:10px;left:50%;transform: translate(-50%, -50%);">
@@ -29,8 +29,8 @@
     Server IP Address: </h2>
 
 <div style="text-align: center;position:absolute;top:80%;left:50%;transform: translate(-50%, -50%);">
-    <form action="/terminal_login">
-        <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Change setting"/>
+    <form action="/screenshot">
+        <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Render screenshot"/>
     </form>
 </div>
 <link rel="stylesheet" href="metro-all.css">
