update: code refactor, cleanup
Took 30 minutes

--- a/screenshot.html
+++ b/screenshot.html
@@ -5,11 +5,13 @@
 
     </div>
 </header>
-<div class="text-leader" style="position:absolute;bottom:10px;left:50%;transform: translate(-50%, -50%);">
+<div class="text-leader"
+     style="position:absolute;font-weight: 500;bottom:10px;left:50%;transform: translate(-50%, -50%);">
     www.zapsi.eu
 </div>
 <div style="position:absolute;top:40%;left:50%;height: 60%">
-    <img style="height: 100%;transform: translate(-50%, -50%);border: 1px dodgerblue solid" src="image.png" alt="Italian Trulli">
+    <img style="height: 100%;transform: translate(-50%, -50%);border: 1px dodgerblue solid" src="image.png"
+         alt="Italian Trulli">
 </div>
 
 <div style="text-align: center;position:absolute;top:80%;left:50%;transform: translate(-50%, -50%);">
@@ -27,9 +29,6 @@
 
     }, false);
 </script>
-</body>
-
-</html>
 
 
 
