--- a/homepage.html
+++ b/homepage.html
@@ -5,19 +5,10 @@
 
     </div>
 </header>
-<div class="text-leader" style="position:absolute;bottom:10px;left:50%;transform: translate(-50%, -50%);">
+<div class="text-leader"
+     style="position:absolute;font-weight: 500;bottom:10px;left:50%;transform: translate(-50%, -50%);">
     www.zapsi.eu
 </div>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:20%;left:51%;">
-    {{.IpAddress}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:30%;left:51%">
-    {{.Mask}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:40%;left:51%">
-    {{.Gateway}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:50%;left:51%">
-    {{.ServerIpAddress}}</h2>
-</div>
-
 
 <h2 style="text-align: center;font-weight: 500;position:absolute;top:20%;right:50%;">
     Actual IP Address: </h2>
@@ -28,9 +19,34 @@
 <h2 style="text-align: center;font-weight: 500;position:absolute;top:50%;right:50%">
     Server IP Address: </h2>
 
-<div style="text-align: center;position:absolute;top:80%;left:50%;transform: translate(-50%, -50%);">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:20%;left:51%;">
+    {{.IpAddress}}</h2>
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:30%;left:51%">
+    {{.Mask}}</h2>
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:40%;left:51%">
+    {{.Gateway}}</h2>
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:50%;left:51%">
+    {{.ServerIpAddress}}</h2>
+
+
+<div style="text-align: center;position:absolute;top:80%;left:17%;transform: translate(-50%, -50%);">
     <form action="/screenshot">
         <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Render screenshot"/>
+    </form>
+</div>
+<div style="text-align: center;position:absolute;top:80%;left:39%;transform: translate(-50%, -50%);">
+    <form action="/setup">
+        <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Setup network"/>
+    </form>
+</div>
+<div style="text-align: center;position:absolute;top:80%;left:61%;transform: translate(-50%, -50%);">
+    <form action="/restart">
+        <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Restart"/>
+    </form>
+</div>
+<div style="text-align: center;position:absolute;top:80%;left:83%;transform: translate(-50%, -50%);">
+    <form action="/">
+        <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Refresh"/>
     </form>
 </div>
 <link rel="stylesheet" href="metro-all.css">
@@ -43,9 +59,6 @@
 
     }, false);
 </script>
-</body>
-
-</html>
 
 
 
