update: dhcp displayed update: checking server ip address
Took 1 hour 25 minutes

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -16,21 +16,25 @@
 
 <h2 style="text-align: center;font-weight: 500;position:absolute;top:20%;right:50%;">
     Actual IP Address: </h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:30%;right:50%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:28%;right:50%">
     Actual Mask: </h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:40%;right:50%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:36%;right:50%">
     Actual Gateway: </h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:50%;right:50%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:44%;right:50%">
     Server IP Address: </h2>
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:52%;right:50%">
+    Dhcp: </h2>
 
 <h2 style="text-align: center;font-weight: 500;position:absolute;top:20%;left:51%;">
     {{.IpAddress}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:30%;left:51%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:28%;left:51%">
     {{.Mask}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:40%;left:51%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:36%;left:51%">
     {{.Gateway}}</h2>
-<h2 style="text-align: center;font-weight: 500;position:absolute;top:50%;left:51%">
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:44%;left:51%">
     {{.ServerIpAddress}}</h2>
+<h2 style="text-align: center;font-weight: 500;position:absolute;top:52%;left:51%">
+    {{.Dhcp}}</h2>
 
 
 <div style="text-align: center;position:absolute;top:80%;left:28%;transform: translate(-50%, -50%);">
