bugfix: refreshing timer when network changed
Took 10 minutes

--- a/html/screenshot.html
+++ b/html/screenshot.html
@@ -10,7 +10,7 @@
     www.zapsi.eu
 </div>
 <div style="position:absolute;top:35%;left:50%;height: 60%">
-    <img style="height: 100%;transform: translate(-50%, -50%);border: 1px dodgerblue solid" src="../image.png"
+    <img style="height: 100%;transform: translate(-50%, -50%)" src="../image.png"
          alt="Italian Trulli">
 </div>
 
