change: added ":" for keypad for server ip address bugfix: proper loading homepage when returned from another page
Took 15 minutes

--- a/html/setup.html
+++ b/html/setup.html
@@ -50,7 +50,7 @@
             <input placeholder="Server Ip Address"
                    class="input-large"
                    type="text" data-role="keypad"
-                   data-keys="0,1,2,3,4,5,6,7,8,9,."
+                   data-keys="0,1,2,3,4,5,6,7,8,9,.,:"
                    name="serveripaddress">
         </div>
     </div>
