--- a/html/homepage.html
+++ b/html/homepage.html
@@ -64,7 +64,7 @@
     </form>
 </div>
 <div style="text-align: center;position:absolute;top:70%;left:50%;transform: translate(-50%, -50%);">
-    <form action="/setup">
+    <form action="/password">
         <input style="width: 276px;margin: 20px;" class="button primary large" type="submit" value="Setup"/>
     </form>
 </div>
