update: displaying version on homepage
Took 21 minutes

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -29,6 +29,10 @@
     <div id="remainingTime" class="text-leader"
          style="position:absolute;font-weight: 500;top:25px;right:1%;transform: translate(-50%, -50%);">
     </div>
+    <div id="version" class="text-leader"
+         style="position:absolute;font-weight: 500;top:25px;left:6%;transform: translate(-50%, -50%);">
+        {{.Version}}
+    </div>
 </header>
 <div class="text-leader"
      style="position:absolute;font-weight: 500;bottom:10px;left:50%;transform: translate(-50%, -50%);">
